--- a/liturgia/misa.html
+++ b/liturgia/misa.html
@@ -18,7 +18,7 @@
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
+    <h1 class="init">CARMELITAS</h1>
   
     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</i></b></h3>
@@ -30,9 +30,10 @@
         <ol>
           <li class="li"><a href="#valida">VALIDEZ DE LA MISA</a></li>
           <li class="li"><a href="#entrada">RITOS DE ENTRADA</a></li>
-          <li class="li"><a href="#palabra">LITURGÍA DE LA PALABRA</a></li>
-          <li class="li"><a href="#eucaristica">LITURGÍA EUCARÍSTICA</a></li>
+          <li class="li"><a href="#palabra">LITURGIA DE LA PALABRA</a></li>
+          <li class="li"><a href="#eucaristica">LITURGIA EUCARÍSTICA</a></li>
           <li class="li"><a href="#despedida">RITOS DE DESPEDIDA</a></li>
+          <li class="li"><a href="#docs">DOCUMENTOS RELACIONADOS</a></li>
         </ol>
 
       </div>
@@ -101,22 +102,17 @@
      </section>
     <!-- ////////////////////////////////////////////////// -->
     <section id="entrada">
-      <h2>ENTRADA</h2>
+   
+      <H3>POSTURAS</H3>
       <ol>
-        <li>Al ingresar tener presente ante Quien estamos</li>
-        <li>El silencio</li>
-        <li>Hacer un gesto de saludo</li>
-        <li>"Para que al nombre de Jesús toda rodilla se doble en los cielos, en la tierra y en los abismos" (Filipenses 2:10).</li>
-
+        <li>SENTADO: Escucha atenta</li>
+        <li>PIE: Respeto y disposición</li>
+        <li>RODILLAS: Adoración a la Presencia de Dios</li>
       </ol>
       <h2>RITOS INICIALES</h2>
      
       <p>	La finalidad de estos actos es hacer que los fieles reunidos en la unidad construyan la comunión y se dispongan a escuchar la Palabra y a celebrar dignamente la Eucaristía. </p>
-    <ol>
-      <li>SENTADO: Escucha atenta</li>
-      <li>PIE: Respeto y disposición</li>
-      <li>RODILLAS: Adoración a la Presencia de Dios</li>
-    </ol>
+   
       <p>
         1.	ENTRADA <br>
         2.	SALUDO<br>
@@ -130,11 +126,20 @@
       <H2>ENTRADA</H2>
       <P>La genuflexion es el saludo que hacemos al entrar  a la casa de Dios. Dolamos la rodilla y hacemos la señal de la cruz.</P>
       <ol>
-        <li>Canto de entrada
+        <li>Al ingresar tener presente ante Quien estamos</li>
+        <li>El silencio MR 45</li>
+        <li>Hacer un gesto de saludo</li>
+        <li>"Para que al nombre de Jesús toda rodilla se doble en los cielos, en la tierra y en los abismos" (Filipenses 2:10).</li>
+
+      </ol>
+      <ol>
+        <li>Canto de entrada MR 47
           <ul>
             <li>Promover la unidad de los fieles</li>
             <li>Acorde al tiempo litúrgico o la celebración </li>
             <li>Aprobado por la conferencia episcopal</li>
+            <LI>El Graduale Romanum es un libro litúrgico, especialmente en la Misa según el rito romano. Contiene los cantos gregorianos asignados a las distintas partes de la Misa, como el Introito, el Gradual, el Alleluia, el Ofertorio, y la Comunión. Estos cantos son conocidos por su estilo monódico, es decir, están compuestos para ser cantados a una sola voz, sin acompañamiento instrumental.</LI>
+            <LI>Graduale simplex , creado después del Concilio Vaticano II como una versión simplificada del Graduale Romanum. </LI>
             <li>Si no hay canto se lee la antífona  </li>
             <li>La finalidad del canto es abrir la celebración, promover la unidad e introducir en el misterio del tiempo litúrgico o Festividad, así como acompañar la procesión. MR 47 </li>
             <LI>La procesión simboliza el peregrinaje de la Iglesia hacia Dios. Los fieles, representados por el sacerdote y los ministros, se mueven hacia el altar, que es el símbolo de Cristo y del sacrificio eucarístico. Este movimiento refleja el camino de la vida cristiana, que es un viaje hacia la comunión plena con Dios.  </LI>
@@ -174,6 +179,8 @@
           <li>	Puede ser: Yo confieso, O El Señor ten piedad, este dicho por el sacerdote o cantado	</li>
           <li>Mc 10, 46-52 Bartimeo </li>
           <li>Este acto, bien hecho, nos absuelve de todos nuestros pecados veniales.</li>
+          <LI>San Agustín y otros Padres de la Iglesia sostienen que la oración y los actos de contrición pueden purificar a los fieles de los pecados veniales.</LI>
+          <LI>"La Eucaristía borra los pecados veniales" (CIC 1394).</LI>
         </ul>
         </li><br>
         <li>Gloria MR 53 <br>
@@ -194,9 +201,11 @@
             <li>Tiene una formula trinitaria </li>
             <LI>	El sacerdote invita a orar y juntamente guardan un momento de silencio.</LI>
             <LI>	La realiza el sacerdote y el pueblo responde AMÉN. </LI>
+            <LI>Oración de Intercesión: En el Nuevo Testamento, se observa la práctica de la oración de intercesión, como en 1 Timoteo 2:1, donde San Pablo exhorta a orar por todos los hombres. La Oración Colecta refleja esta intercesión comunitaria, elevando a Dios las necesidades de la Iglesia.</LI>
           </ul>
         </li>
       </ol>
+      
     </section>
     <!-- ////////////////////////////////////////////////// -->
     <section id="palabra">
@@ -412,6 +421,40 @@
   <LI>	CANTO DE SALIDA: A menudo, la Misa concluye con un canto mientras el sacerdote y los ministros se retiran del altar.</LI>
 
 </OL>
+</section>
+<!-- /////////////////////////////////////// -->
+<section id="docs">
+<H2>DOCUMENTOS SOBRE LA MISA</H2>
+<ol >
+  <li class="bold">Instrucción General del Misal Romano (IGMR)</li>
+  <p>La IGMR es la guía principal para la celebración de la Misa según el Rito Romano. Establece normas detalladas sobre cómo debe celebrarse la Misa, incluyendo la disposición de los elementos litúrgicos, los roles de los ministros, y las acciones del celebrante.</p>
+  <p>Señala la importancia de la fidelidad a los textos litúrgicos aprobados y advierte contra la improvisación o modificación de las oraciones litúrgicas.</p>
+
+  <li class="bold">Sacrosanctum Concilium (1963)</li>
+  <p>Es la Constitución sobre la Sagrada Liturgia del Concilio Vaticano II y establece las bases para la reforma litúrgica.</p>
+  <p>Pide que las ceremonias sean claras y comprensibles, evitando complicaciones innecesarias y prácticas que no favorezcan la devoción y el sentido del misterio.</p>
+
+  <li class="bold">Mysterium Fidei (1965)</li>
+  <p>Esta encíclica del Papa Pablo VI se centra en la Eucaristía, especialmente en la doctrina de la transubstanciación, y advierte contra interpretaciones erróneas que podrían surgir.</p>
+  <li>Aunque su enfoque es más doctrinal, también toca aspectos litúrgicos, advirtiendo contra innovaciones que puedan desvirtuar la enseñanza tradicional sobre la presencia real de Cristo en la Eucaristía.</li>
+
+  <li class="bold"> Inaestimabile Donum (1980)</li>
+  <p>Este documento, también emitido por la Congregación para el Culto Divino, aborda directamente diversos abusos litúrgicos.</p>
+  <p>Habla sobre la importancia del respeto a las normas litúrgicas establecidas y condena la creatividad litúrgica que lleva a alteraciones arbitrarias del rito.</p>
+
+  <li class="bold">Ecclesia de Eucharistia (2003)</li>
+  <p>Esta encíclica del Papa San Juan Pablo II aborda la centralidad de la Eucaristía en la vida de la Iglesia y condena los abusos litúrgicos que pueden diluir el sentido del Sacramento.</p>
+  <p>Alerta contra la introducción de prácticas que no estén en conformidad con la tradición y las normas litúrgicas aprobadas.</p>
+
+  <li class="bold">Redemptionis Sacramentum (2004)</li>
+  <p>Este documento, emitido por la Congregación para el Culto Divino y la Disciplina de los Sacramentos, aborda específicamente los abusos litúrgicos que deben evitarse en la celebración de la Eucaristía.</p>
+  <p>Insiste en la importancia de seguir fielmente las normas litúrgicas para preservar la santidad y la unidad del culto.</p>
+  <p>Subraya que nadie tienen la autoridad para modificar los ritos litúrgicos o introducir innovaciones arbitrarias.</p>
+ 
+
+ 
+ 
+</ol>
 </section>
 </body>
 </html>
