--- a/liturgia/misa.html
+++ b/liturgia/misa.html
@@ -197,6 +197,33 @@
           </ul>
         </li>
       </ol>
+      <h2>Orden Seglar Carmelita</h2>
+      <p>CANTO DE ENTRADA MR 46 <br>
+        1.	La finalidad del canto es abrir la celebración, promover la unidad e introducir en el misterio del tiempo litúrgico, MR 47<br>
+        2.	La procesión simboliza el peregrinaje de la Iglesia hacia Dios. La procesión es también un signo de la unidad de la comunidad de fieles que se reúne en torno a Cristo, representado por el altar. <br>
+        3.	Recuerda la entrada de Jesús en Jerusalén, (Mt 21,8-9).<br><br>
+        SALUDO <br>
+        1.	En el nombre del Padre, del Hijo y del Espíritu Santo// Amén<br>
+        2.	Expresión de nuestra fe trinitaria. 2Co13,14<br><br>
+        
+        ACTO PENITENCIAL MR 52<br>
+        1.	Hermanos, reconozcamos nuestros pecados<br>
+        2.	Momento de silencio<br>
+        3.	Todos reconocen los pecados<br>
+        4.	Yo confieso, O El Señor ten piedad<br>
+        5.	Mc 10, 46-52 Bartimeo, Lc 18,9 fariseo y publicano<br>
+        6.	Este acto, nos absuelve de todos nuestros pecados veniales.<br><br>
+        GLORIA MR 53<br>
+        1.	Puede ser cantado o recitado. El texto es inalterable<br>
+        2.	Tampoco el credo, El santo, El Padre Nuestro y el Cordero.<br>
+        3.	Lc 2, 14<br>
+        ORACIÓN COLECTA MR 54<br>
+        1.	Recoge las intenciones de la comunidad<br>
+        2.	Tiene una formula trinitaria<br>
+        3.	El sacerdote invita a orar y juntamente guardan silencio.<br>
+        4.	La realiza el sacerdote y el pueblo responde AMÉN.<br>
+        “Una misa vale más que todas las buenas obras que yo pueda hacer en mi vida. “San Juan Crisóstomo <br>
+        </p>
     </section>
     <!-- ////////////////////////////////////////////////// -->
     <section id="palabra">
