--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
 
       <div class="container">
-        <!-- <div class=""> <a href="#alInicio"><img src="./media/ESCUDOCARM.png" alt="" class="logoC"></a></div> -->
+        <div class=""> <a href="#alInicio"><img src="./media/ESCUDOCARM.png" alt="" class="logoC"></a></div>
         <p class="logo"> CRISTO SALVADOR
           <!-- ****************************************************** -->
           <a href="#alInicio"><img src="media/ESCUDOCARM.png" alt="" class="logoC"></a>
