--- a/oracion/compendioOracion.html
+++ b/oracion/compendioOracion.html
@@ -80,6 +80,7 @@ b)	El disfrute de la Eucaristía y la Adoración, <br>
 c)	El estado del alma, alegría, deseo de conversión permanente<br>
 <h3>San Francisco de Asís afirma que podemos ver nuestra unión al Santo Espíritu en una actitud diaria de Paz.<br>
   Si nos irritamos, nos turbamos, angustiamos, nos está indicando donde deberemos trabajar. <br></h3>
+  <H3>Por eso la importancia fundamental de el examen de conciencia diario</H3>
 
 
 <h4>4. EL SILENCIO</h4>
@@ -117,7 +118,7 @@ Empezaremos por el Padre nuestro, luego el Ave María. De aquí pasaremos a inic
 Perseverar en la oración a pesar de las dificultades, son momentos de limpieza, de purificación <br>Regocijémonos en las pruebas, es el Señor que sale a nuestro encuentro<br>
 
 <h3>LA ORACIÓN PERFECTA</h3>
-<b>PADRE NUESTRO</b><br>
+<b>PADRE NUESTRO</b> CEC 2759-2865<br>
 <p>
  Fundamento Bíblico: <br>
 Creación de todos los seres humanos:   En Génesis 1:27<br>
@@ -146,16 +147,18 @@ Creación de todos los seres humanos:   En Génesis 1:27<br>
      - Primer cielo: El cielo visible, donde están las nubes y el aire.
      - Segundo cielo: El cielo donde están los cuerpos celestes (sol, luna, estrellas).<br>
      - Tercer cielo: Un nivel superior, considerado el lugar de la presencia de Dios<br><br>
+     CEC 2802<br><br>
      El cielo esta donde Dios esta<br>Estamos en el cielo, cuando estamos con Dios<br><br>
+
   
 </p>
-<b>SANTIFICADO SEA TU NOMBRE</b><br>
+<b>SANTIFICADO SEA TU NOMBRE CEC2807</b><br>
 <P>
   Isaías 6:3: Los serafines proclaman: "Santo, santo, santo es el Señor de los ejércitos; toda la tierra está llena de su gloria". <br><br>
   En hebreo, la palabra que se usa para "santo" o "santidad" es קָדוֹשׁ (qādôš), que significa "separado" o "apartado". En el contexto bíblico, ser santo es estar apartado para Dios y dedicado exclusivamente a su servicio. <br><br>
   Santidad de Dios: La santidad es uno de los atributos más esenciales de Dios. Él es absolutamente diferente, separado de toda corrupción, pecado y maldad. <br><br>
   El Lugar Santo y los Objetos Sagrados: En la estructura del Templo, ciertos lugares (como el "Lugar Santísimo") y objetos (como el Arca de la Alianza) son designados como "santos" porque están consagrados exclusivamente al culto a Dios. <br><br>
-  la palabra para santo es ἅγιος (hágios), que también implica separación y pureza. <br><br>
+  la palabra griega para santo es ἅγιος (hágios), que también implica separación y pureza. <br><br>
   <span><b>Santos en Cristo</b></span>
   Juan 17:11: Jesús ora diciendo: "Padre santo, guarda en tu nombre a los que me has dado, para que sean uno, así como nosotros somos uno". <br>
   1 Tesalonicenses 5:23: "Y el mismo Dios de paz os santifique por completo; y todo vuestro ser, espíritu, alma y cuerpo, sea guardado irreprensible para la venida de nuestro Señor Jesucristo". <br>
@@ -173,7 +176,8 @@ Creación de todos los seres humanos:   En Génesis 1:27<br>
 Sean santos. Lev 11,44 Lev 19,2 1Tes 4,7 1Pe 1,16<br><br>
 CEC 2814 Depende inseparablemente de nuestra vida y de nuestra oración que su Nombre sea santificado entre las naciones:<br>
 Porque si nosotros vivimos bien, el nombre divino es bendecido; pero si vivimos mal, es blasfemado, según las palabras del apóstol: “el nombre de Dios, por vuestra causa, es blasfemado entre las naciones”(Rm 2, 24; Ez 36, 20-22) (San Pedro Crisólogo, Sermo 71, 4).<br><br>
- La oración del Padre Nuestro es oración nuestra si se hace “en el Nombre” de Jesús (cf Jn 14, 13; 15, 16; 16, 24. 26). Jesús pide en su oración sacerdotal: “Padre santo, cuida en tu Nombre a los que me has dado” (Jn 17, 11).
+ La oración del Padre Nuestro es oración nuestra si se hace “en el Nombre” de Jesús (cf Jn 14, 13; 15, 16; 16, 24. 26). Jesús pide en su oración sacerdotal: “Padre santo, cuida en tu Nombre a los que me has dado” (Jn 17, 11). <br>
+ las cartas paulinas casi siempre empiezan saludando a los santos
 </P>
 
 <b>VENGA A NOSOTROS TU REINO</b><br>
@@ -242,6 +246,13 @@ La tentación es el apartarse sutilmente del Señor<br>La tentación no está en
 Una falsa humildad es cortina de un pecado interior, la humildad es vivir de acuerdo a la verdad, hay actos exteriores que son signos y elementos de la verdadera humildad, como son: la eucaristía, la confesión, la vida comunitaria, etc<br>La verdadera humildad no inquieta, da paz, serenidad, por eso para discernir debemos no solo ver la acción sino también tratar de ver la intención<br>Un engaño sutil del maligno es hacernos creer que tenemos lo que no tenemos, que somos lo que solo estamos en camino a ser, <br>Es su manera de evitar que sigamos progresando. Otro ardid es hacernos creer que ya no vamos a caer en los mismos pecados, no solo detiene nuestro continuo deber de mejorar, sino que nos aleja del amor a Dios y al prójimo<br>
 Resume todo lo anterior diciendo que las dos fortalezas del cristiano son el amor y el temor de Dios. El amor hace que los pasos se apresuren y el temor que nos fijemos donde pisamos<br>Quien ama a Dios favorece todo lo bueno, el amor nos enseña que desde el bien, y solo desde él combatir el mal. Recuerda a Rom 12,21<br>Buscar el origen y desde allí actuar. El Señor nos da en cada momento aquello que necesitamos, el mucho estudiar algo no nos hará ver más allá de lo que necesitamos en el momento, la función del conocimiento y en general de todo es ayudarnos a mejorar. Si estudio mucho la oración y no oro corro el peligro de formarme ideas falsas. Luego podremos retomar y continuar. Un gran mal es desviarnos, pues desviaremos a otros, seremos agentes del mal, convencidos que trabajamos para el Señor<br><br>
 Hay una coincidencia entre el amor y el temor de Dios de Teresa y consolación y desolación de Ignacio de Loyola. El que ama no peca, no es que no peque, sino que rechaza todo pecado, desde lo más profundo de su corazón, que realmente no peca. Aunque pueda ser considerados pecados algunas de sus acciones. Si tiene humildad, se corregirá. Si tiene amor de Dios aceptara la corrección, si tiene temor de Dios, evitara volver a caer, si ora y se confiesa será perdonado. Amar a Dios es no pecar, o desear jamás pecar. Seamos consiente que cada persona es llevada por el Señor por su propio camino. <br><br>
+
+<p>1.	“Dios ni es tentado por el mal ni tienta a nadie” (St 1, 13) <br>
+  2.	"Cada uno es tentado cuando de su propio deseo es atraído y seducido. St 1,14<br>
+  3.	DEFINICIÓN: La tentación es un impulso o incitación que nos mueve hacia la desobediencia a Dios<br>
+  4.	ETIMOLOGIA: Proviene del latín tentatio, que significa "prueba" o "tentación", derivada del verbo tentare o temptare, que significa "probar" o "intentar".<br>
+  5.	BIBLIA: MT 4,4-7, Gn 3,1-7 .......<br>
+  </p>
 
 <b>Y LÍBRANOS DEL MAL</b>
 <p>
