--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
     <title>ORDEN CARMELITA SEGLAR</title>
   </head>
-  <!-- //////////////////////////////////////////////////////////////// -->
-
+<!-- //////////////////////////////////////////////////////////////// -->
   <body>
     <p id="alInicio" class="principio"></p>
     <header>
@@ -17,30 +16,27 @@
       <div class="container">
         <div class=""> <a href="#alInicio"><img src="./media/ESCUDOCARM.png" alt="" class="logoC"></a></div>
         <p class="logo"> CRISTO SALVADOR
-          <!-- ****************************************************** -->
+<!-- *************************************************************** -->
           <a href="#alInicio"><img src="media/ESCUDOCARM.png" alt="" class="logoC"></a>
           <a href="euangelium/01formacion.html" class="a">APOLOGÍA </a>
           <a href="noviciado/01formacion.html" class="a">FORMACIÓN </a>
       </div>
     </header>
-    <!-- *************************************************************************** -->
+<!-- ************************************************************** -->
     <section id="hero1">
       <img src="media/PORTADA2023.jpeg" alt="">
     </section>
-    <!--*****************************************************************************  -->
+<!--**************************************************************  -->
     <section id="">
       <div class="container">
         <div class="texto">
-
           <h2>Somos <br> <span class="color-acento">LA ORDEN SEGLAR CARMELITA</span></h2>
-          <p>Quiénes pertenecen a la Orden Seglar de los Carmelitas? <br> Aquellos miembros del pueblo de Dios, que
-            llamados por el Señor Jesús,
+          <p>Quiénes pertenecen a la Orden Seglar de los Carmelitas? <br> Aquellos miembros del pueblo de Dios, que llamados por el Señor Jesús,
             y libres de impedimentos, acogen conscientemente su vocación aceptando el programa de Formación y de vida
             que ofrece la Orden Carmelita Seglar.</p>
           <div class="img-container">
             <img src="media/JUNTOS.jpg" alt="juntos">
           </div>
-
         </div>
       </div>
     </section> <br></br>
@@ -48,7 +44,7 @@
       <h2>ORDEN CARMELITA SEGLAR-PUCUSANA 2024</h2>
     </footer>
 
-    <!-- ///////////////////////////////////// -->
+<!-- ///////////////////////////////////////////////////////// -->
   </body>
 
 </html>
