--- a/oracion/compendioOracion.html
+++ b/oracion/compendioOracion.html
@@ -20,7 +20,7 @@
     </header> <br><br>
     <!-- *************************************************************************** -->
     <h1 class="init">OBJETIVO</h1>
-       <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
+       <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</h3>
 
  
@@ -130,7 +130,69 @@ Creación de todos los seres humanos:   En Génesis 1:27<br>
    San Ireneo (siglo II) enseñaba que la encarnación de Cristo tenía el propósito de hacer a los seres humanos hijos de Dios. En su obra "Contra las Herejías" (Libro III, 19,1), dice que Jesús "se hizo lo que somos para hacernos lo que Él es", es decir, hijos de Dios por adopción.<br><br>
 2. San Agustín:<br>
    San Agustín (siglo IV-V) habla en varias ocasiones sobre la idea de que los cristianos se convierten en hijos de Dios por la gracia del bautismo y la fe en Cristo. Para Agustín, aunque todos los seres humanos son criaturas de Dios, la filiación divina plena viene a través de la redención en Cristo.<br><br>
+   <h3 class="subtitulo">Perspectiva Histórica</h3>
+   <h4 class="cita">La Circuncisión </h4>
+   "Este es mi pacto, que guardaréis entre mí y vosotros y tu descendencia después de ti: Todo varón de entre vosotros será circuncidado." (Gn 17:10). <br>
+   Signo de pertenencia al pueblo elegido: Para los israelitas, la circuncisión era una señal de que pertenecían al pueblo escogido por Dios. Era un símbolo físico de su identidad como descendientes de Abraham y herederos de las promesas divinas. Al cumplir este mandato, los varones entraban en la comunidad del pueblo judío y eran reconocidos como miembros del pacto. <br><br>
+
+Purificación y santidad: La circuncisión también se interpretaba como un rito de purificación y consagración a Dios. Al remover el prepucio, se señalaba la necesidad de ser "limpios" ante Dios, un aspecto importante de la teología de la santidad en el Antiguo Testamento.<br><br>
+
+Obediencia a la Ley: Con el tiempo, la circuncisión se integró en la Ley de Moisés como una práctica obligatoria para todos los varones judíos, confirmada en Levítico 12:3. No circuncidar a un hijo al octavo día se consideraba una falta grave que implicaba la exclusión de la comunidad y del pacto.<br><br>
+
+"Al octavo día se circuncidará la carne del prepucio del niño." (Levítico 12:3)<br><br>
+
+<h4 class="cita">Circuncisión Espiritual</h4>
+Con el desarrollo de la teología profética y en el Nuevo Testamento, se introdujo la idea de una "circuncisión del corazón" como una metáfora espiritual. Esto aparece en varios pasajes del Antiguo Testamento (Dt 10:16; Jeremías 4:4) y significa la necesidad de una conversión interna y sincera hacia Dios, más allá de la obediencia externa y los ritos. <br><br>
+
+San Pablo en el Nuevo Testamento también empleó este concepto cuando argumentó que la verdadera circuncisión es la del corazón, hecha por el Espíritu, y que la fe en Cristo, más que el cumplimiento de los ritos judíos, era lo que unía a las personas con Dios (Rm 2:29). <br><br>
+
+<h4 class="lema">Circuncisión y Bautismo</h4>
+"En él también fuisteis circuncidados con una circuncisión no hecha por manos humanas, sino con la circuncisión de Cristo, al despojaros del cuerpo pecaminoso, mediante el bautismo. Con él fuisteis sepultados en el bautismo, y con él también fuisteis resucitados por la fe en el poder de Dios, que lo resucitó de entre los muertos" (Col 2:11-12) <br>
+<b><i>Este pasaje establece un paralelo directo entre la circuncisión del Antiguo Testamento y el bautismo cristiano, afirmando que, mientras que la circuncisión era un rito físico, el bautismo es un rito espiritual que cumple la misma función de entrada en el pueblo de Dios.</i></b> <br>
+
+<p>San Pablo también enseña que, en Cristo, no hay distinción entre los circuncidados y los no circuncidados. Lo importante es la fe en Cristo y la transformación interior que ocurre mediante el bautismo: <br>
+
+  "Porque todos los que habéis sido bautizados en Cristo, de Cristo os habéis revestido... Y si sois de Cristo, entonces sois descendencia de Abraham, herederos según la promesa" (Gálatas 3:27-29). <br><br>
+
+  Esto subraya que los bautizados en Cristo son herederos del pacto con Abraham, no a través de la circuncisión física, sino por medio de la fe en Cristo, simbolizada en el bautismo.</p>
 </p>
+<p> San Pablo describe el bautismo como un acto en el cual los creyentes son sepultados con Cristo y resucitados a una nueva vida: <br>
+
+  Romanos 6:3-4:"¿No sabéis que todos los que fuimos bautizados en Cristo Jesús fuimos bautizados en su muerte? Por tanto, fuimos sepultados con él por medio del bautismo en su muerte, para que así como Cristo resucitó de los muertos por la gloria del Padre, también nosotros andemos en vida nueva." <br><br>
+  
+  Aquí, el bautismo se presenta como una transformación espiritual que lleva a una nueva vida, algo que antes se representaba a través de la circuncisión.</p>
+<h4 class="cita">Desarrollo Teológico</h4>
+<p>
+  En la teología cristiana, se entiende que el bautismo es el rito de iniciación en la comunidad del Nuevo Pacto, de manera similar a cómo la circuncisión era el rito de iniciación en el Antiguo Pacto. Ambos simbolizan la pertenencia al pueblo de Dios, pero hay diferencias importantes: <br><br>
+  
+  Circuncisión física vs. transformación espiritual: Mientras que la circuncisión era un signo externo y físico que marcaba a los varones judíos como parte del pueblo elegido, el bautismo es un signo espiritual que representa la muerte al pecado y el renacimiento en Cristo para todos los creyentes, hombres y mujeres.<br><br>
+  
+  Universalidad del Bautismo: A diferencia de la circuncisión, que se aplicaba solo a los varones, el bautismo es un sacramento universal que incluye a todos los creyentes, independientemente de su género, lo que lo hace  universal.<br><br>
+  
+  El Nuevo Pacto en Cristo: El Nuevo Testamento enseña que Cristo es el mediador de un nuevo pacto (Hebreos 9:15). El bautismo se asocia con este nuevo pacto porque, a través de él, los creyentes se identifican con la muerte, sepultura y resurrección de Cristo, recibiendo una nueva vida espiritual.</p>
+
+<h4 class="lema">Referencias Históricas</h4>
+  <p>
+    
+En la tradición patrística y el desarrollo teológico de la Iglesia primitiva, los Padres de la Iglesia vieron el bautismo como la nueva circuncisión que reemplazaba el rito del Antiguo Testamento. Por ejemplo:<br><br>
+
+Justino Mártir (siglo II) y otros apologistas cristianos argumentaron que el bautismo era una forma de circuncisión espiritual, cumpliendo la promesa de Dios de hacer de su pueblo santo, no solo por una marca externa, sino por una transformación interna.<br><br>
+
+San Agustín (siglo IV) enfatizó que, a través del bautismo, los cristianos eran purificados del pecado original, algo que la circuncisión física no podía lograr. Esta transformación espiritual era, para Agustín, una obra de la gracia divina.<br><br>
+  </p>
+<h4> Bautismo y Circuncisión</h4>
+  <p>
+ 
+A pesar de las similitudes teológicas entre ambos, también hay diferencias claras: <br><br>
+
+El bautismo es un sacramento para todos: No se limita a los varones, como era el caso con la circuncisión, sino que está abierto a todas las personas.<br><br>
+
+Gracia de Dios: El bautismo se considera un acto de la gracia divina, mediante el cual los pecados son perdonados y se otorga la regeneración espiritual. Esto va más allá de la circuncisión, que no implicaba el perdón de los pecados.<br><br>
+
+Espiritualidad y nueva vida en Cristo: Mientras que la circuncisión marcaba la pertenencia física al pueblo de Israel, el bautismo marca la entrada a la vida nueva en Cristo, una transformación que afecta el corazón y el alma.<br><br>
+  </p>
+
+
 <h3 class="subtitulo">QUE ESTAS EN EL CIELO o EN LOS CIELOS</h3><br>
 <p>
   VER: VULGATA LATINA e INTERLINEAL: TISCHENDORF O GNT<br>
@@ -220,10 +282,7 @@ El pan nuestro de cada día… el pan verdadero es la eucaristía.<br> La analog
 CEC 2833  «La Eucaristía es nuestro pan cotidiano [...] La virtud propia de este divino alimento es una fuerza de unión: nos une al Cuerpo del Salvador y hace de nosotros sus miembros para que vengamos a ser lo que recibimos [...] Este pan cotidiano se encuentra, además, en las lecturas que oís cada día en la Iglesia, en los himnos que se cantan y que vosotros cantáis. Todo eso es necesario en nuestra peregrinación» (San Agustín, Sermo 57, 7, 7).<br><br>
 <!-- ***************************************************************************** -->
 <h3 class="subtitulo"> PERDONA NUESTRAS OFENSAS COMO TAMBIÉN NOSOTROS PERDONAMOS A LOS QUE NOS OFENDEN (DEUDAS)</h3>
-<p>
-
-A semejanza del Padre Gn 1, 27 => Mt5, 48 lc 6,36, Jn 13,34 Ef 4,32 <br>
-
+<p>A semejanza del Padre Gn 1, 27 => Mt5, 48 lc 6,36, Jn 13,34 Ef 4,32 <br>
 (cf. Mt 18, 23-35), acaba con esta frase: “Esto mismo hará con vosotros mi Padre celestial si no perdonáis cada uno de corazón a vuestro hermano”<br><br>
 CEC 2845 No hay límite ni medida en este perdón, esencialmente divino (cf Mt 18, 21-22; Lc 17, 3-4). Si se trata de ofensas (de “pecados” según Lc 11, 4, o de “deudas” según Mt 6, 12)<br><br>
 Como encaja Mt 12,31-32<br><br>
@@ -375,9 +434,22 @@ allá rýsai imás apó toú poniroú. Amín.<br>
  <p>Y bendito es el fruto de tu vientre, Jesús: Esta frase reconoce a Jesús, el Hijo de Dios, como la bendición suprema. Jesús, el fruto del vientre de María, es el centro de la salvación cristiana. <br>Se resalta que su maternidad es sagrada porque ella lleva en su seno al Salvador del mundo.</p>
  <!-- ********************************************************* -->
  <H3 class="subtitulo">Santa María, Madre de Dios, </H3>
- <p>Santa María, Madre de Dios: Este título de María, Theotokos en griego, fue declarado en el Concilio de Éfeso en el año 431. Al llamarla "Madre de Dios", se afirma que María es la madre de Jesús, que es verdadero Dios y verdadero hombre. Es una declaración central en la mariología.</p>
+ <p>Santa María, Madre de Dios: Este título de María, Theotokos en griego, fue declarado en el Concilio de Éfeso en el año 431. Al llamarla "Madre de Dios", se afirma que María es la madre de Jesús, que es verdadero Dios y verdadero hombre. Es una declaración central en la cristología.</p>
+ <P>Surge como respuesta al concilio de Efeso, tercer concilio ecuménico <br>
+  El tema central era la naturaleza de Jesucristo <br>
+
+  Cirilo de Alejandría, quien defendía la unidad de las dos naturalezas de Cristo (divina y humana) en una sola persona. <br><br>
+Nestorio, patriarca de Constantinopla, quien enseñaba que en Cristo había dos personas separadas: una divina y otra humana, y por lo tanto proponía que María debía ser llamada "Cristotókos" (Madre de Cristo), en lugar de "Theotókos" (Madre de Dios). <br><br>
+Este debate tocaba el corazón de la fe cristiana, ya que influía directamente en la comprensión de la encarnación y la redención. <br><br>
+
+<h3 class="subtitulo">Conclusiones del Concilio</h3>
+
+Condena del Nestorianismo: Nestorio fue declarado hereje, y su doctrina de la separación de las dos personas en Cristo fue rechazada. Se afirmó que Jesucristo es una sola persona, en la cual coexisten plenamente dos naturalezas, la divina y la humana, en una "unión hipostática" (unión de naturaleza sin confusión ni separación). <br><br>
+
+Afirmación del título de "Theotókos" para María: El concilio proclamó que María debía ser reconocida como "Madre de Dios" (Theotókos), no solo "Madre de Cristo" (Cristotókos), ya que Jesús es Dios encarnado desde el momento de su concepción. Esto fortaleció la devoción a la Virgen María dentro del cristianismo. <br><br>
+
  <p>1Pe 1,14 separados por Dios <br>
-   Lc 1,43,  Madre es quien lleva en el vientre a un Hijo, lo tiene <br>
+   Lc 1,43,  Madre es quien lleva en el vientre a un Hijo, lo tiene, cria y cuida <br>
   Mt 1,23 Emmanuel<br>
   Mt 2,11 lo adoraron los magos <br>
   Jn 20,28 Señor Mio y Dios mio<br>
@@ -398,14 +470,20 @@ allá rýsai imás apó toú poniroú. Amín.<br>
  </p>
  <H3 class="subtitulo">Amén.</H3>
  <p>La importancia del rosario</p>
- <h3 class="subtitulo">COMENTARIO</h3>
+ <!-- ************************************************* -->
+ <h3 class="subtitulo">HISTORIA Y RESUMEN </h3>
  <P>La primera parte del Ave María está tomada directamente del Evangelio de Lucas y celebra el papel especial de María en la salvación como la llena de gracia y bendita entre todas las mujeres.</P>
  <P>La segunda parte es una súplica a María, reconociendo su maternidad divina y pidiendo su intercesión por los fieles, especialmente en el momento más crucial, la hora de la muerte.</P><br>
- <P>Hasta el siglo VI solo se decia la primera parte <br>
+ <h4>Desarrollo histórico</h4>
+ Se va iniciando en los monasterios como una manera de tener presente el concilio de Efeso, donde solo se recordaba Lc 1,28 "Dios te salve María,Llena eres de Gracia". Se llamava la salutación <br>
+ Hasta el siglo VI solo se decia la primera parte <br>
+A inicios del siglo XI aprox 1050 se hace popular, debido a una creciente devoción Mariana y su brevedad <br>
   a partir de 1198 el obispo de Paris invita a unirlo con el Padre Nuestro y el Credo <br>
   Sixto IV añade A la primera parte: Jesucristo:Amén <br>
-  En 1440 Bernardino de Siena agrega: Ruega por nosotros, pecadores<br>
-  1868 Pio V la define como la rezamos hoy.<br>
+  En 1440 San Bernardino de Siena agrega: Ruega por nosotros, pecadores<br>
+  1568 Pio V después del Concilio de Trento, la incluye en el Brevario Romano y la define como la rezamos hoy.<br>
+
+  <!-- ********************************************** -->
   <h4 class="subtitulo">Imitar a María</h4>
 </P>
   <p>1Co 11,1 imitar a Pablo no es malo, tampoco a la Virgen</p>
@@ -451,8 +529,8 @@ No solo llevamos la cruz con alegría, amamos a quien en ella está. El camino e
 La necesidad de conocer al Señor es cada vez mayor, sin desesperación pero con pasión, es la cruz abrazada y elevada. Es abandonarnos a Dios confiadamente <br><br>
 
 
-<H3>ORACIÓN DE CONTEMPLACIÓN</H3>
-La oración de contemplación llamada por ella oración de unión, está unida a los otros tipos de oración, los tipos de oración no están separados, pues a veces están unidos y en otras se pasa de una a otra. Es un proceso gráfico que se usa para comprender mejor. 
+<H3 class="subtitulo">ORACIÓN DE CONTEMPLACIÓN</H3>
+La oración de contemplación llamada por ella oración de unión, está unida a los otros tipos de oración, los tipos de oración no están separados, pues a veces están unidos y en otras se pasa de una a otra. Es un proceso metodologico y gráfico que se usa para comprender mejor.
 </p>
 
     </section>
