--- a/lectio/intro.html
+++ b/lectio/intro.html
@@ -50,12 +50,13 @@
      <section id="intro">
    <div>
     <H2>INTRODUCCIÓN</H2> 
-    <p>La Biblia Católica tiene un total de 1,330 capítulos. Estos están distribuidos entre los 73 libros que componen el Antiguo y el Nuevo Testamento. Aquí te muestro cómo se distribuyen: <br><br>
+    <p>La Biblia Católica de Jerusalén tiene un total de 1,189 capítulos. Estos están distribuidos entre los 73 libros que componen el Antiguo y el Nuevo Testamento. Aquí te muestro cómo se distribuyen: <br><br>
 
       Antiguo Testamento: 929 capítulos <br>
-      Nuevo Testamento: 401 capítulos <br><br>
+      Nuevo Testamento: 260 capítulos <br><br>
       
-      La Biblia Católica tiene aproximadamente 35,000 versículos </p>
+      La Biblia Católica tiene aproximadamente 31,102 versículos
+    Además de unos 1300 a 1400 perícopas </p>
     <P>Orígenes (184_254 dC) recordaba que la lectura de las Escrituras requiere de atención, constancia y oración. Es una reflexión orante del texto Sagrado.</P> 
     <P>La sistematización del método de la Lectio Divina se encuentra en un libro llamado "La escalera de los monjes" escrita por el monje cartujo Guido, en 1150 aprox. Y lo gráfica como los 4 pasos por la que los monjes llegan al cielo. 
     Reminiscencia de Gn 28,12</P> 
