--- a/Magisterio/moral/FiduciaSupplicans.html
+++ b/Magisterio/moral/FiduciaSupplicans.html
@@ -16,9 +16,8 @@
         <a href="/index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
-    <!-- *************************************************************************** -->
+    <!-- ********************************************************** -->
     <h1 class="init">OBJETIVO</h1>
-    <h3><b>Tanto el que evangeliza como los que escuchen, crezcan en el amor de Dios</b></h3>
     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</i></b></h3>
 
@@ -41,7 +40,7 @@
      2.	Lo que se trata es de ayudar a quienes viven en situaciones de pecado<br>
      3.	Por lo que lo primero es apoyar en una pastoral de conversión<br> 
      4.	Y necesita de un compromiso de los sacerdotes, la comunidad y sobre todo de ellos mismos.<br>
-     5.	31 citas, 20 auto citas 11 sin relación directa a la propuesta, la parte al final nos da a entender que no hay continuidad. Solo hay una cita a un Papa fuera del tema central. Ningún concilio de la iglesia. <br><br>
+     5.	Fiduccia Suplicans tiene 31 citas, 20 auto citas 11 sin relación directa a la propuesta, la parte al final nos da a entender que no hay continuidad. Solo hay una cita a un Papa fuera del tema central. Ningún concilio de la iglesia. <br><br>
      DEFINICIONES <br>
      1.	PASTORAL<br>
      a.	Tiene como objetivo conducir a las almas a la vida eterna<br><br>
