--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -50,7 +50,7 @@
       <div>
         <ol>
           <li class="li"><a href="../euangelium/bautismo.html">BAUTISMO</a></li>
-          <li class="li"><a href="../euangelium/biblia.html">BIBLIA</a></li>
+          <li class="li"><a href="../euangelium/biblia/biblia.html">BIBLIA</a></li>
           <li class="li"><a href="../euangelium/diezmo.html">DIEZMO</a></li>
           <li class="li"><a href="../euangelium/eucaristia.html">EUCARISTIA</a></li>
           <li class="li"><a href="../euangelium/hijo.html">EL HIJO</a></li>
