--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -46,7 +46,7 @@
     </div>
     <section id="Formación">
       <hr>
-      <h1> FORMACIÓN</h1>
+      <h1> TEMAS</h1>
       <div>
         <ol>
           <li class="li"><a href="../euangelium/bautismo.html">BAUTISMO</a></li>
