--- a/historia/concilios/concilioNiceaI.html
+++ b/historia/concilios/concilioNiceaI.html
@@ -3,17 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="/styles/style.css">
+  <title>LITURGIA</title>
 </head>
 <body>
+  <p id="alInicio" class="principio"></p>
+    <header>
+      <div class="container">
+        <p class="logo"> CRISTO SALVADOR</p>
+        <!-- ****************************************************** -->
+        <a href="#alInicio"><img src="/media/ESCUDOCARM.png" alt="ESCUDOCARM" class="logoC"></a>
+        <a href="../index.html" class="nombre">INICIO </a>
+      </div>
+    </header> <br><br>
+    <!-- ****************************************************************** -->
   <section id="inicio">
     <h1>CONCILIO DE NICEA 325</h1>
     <ol>
-      <li><a href="#section1">Contexto</a></li>
-      <li><a href="#section2">Biografía de Arrio</a></li>
-      <li><a href="#section3">Biografía de Atanasio</a></li>
-      <li><a href="#section4">Fundamentos de Arrio</a></li>
-      <li><a href="#section5">Posición Católica</a></li>
+      <li class="li"><a href="#section1">CONTEXTO</a></li>
+      <li class="li"><a href="#section2">BIOGRAFÍA DE ARRIO</a></li>
+      <li class="li"><a href="#section3">BIOGRAFÍA DE ATANASIO</a></li>
+      <li class="li"><a href="#section4">FUNDAMENTOS DE ARRIO</a></li>
+      <li class="li"><a href="#section5">fUNDAMENTOS CATÓLICOS</a></li>
     
     </ol>
   </section>
